tests/rosetta/transpiler/FS/calkin-wilf-sequence.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Calkin-wilf-sequence' based on the file name 'calkin-wilf-sequence.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(60,21): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(27,25): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(27,54): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(31,25): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(31,45): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(37,25): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(37,60): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(40,26): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(41,22): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(44,31): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(45,29): error FS0039: The value or constructor 'num' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(46,29): error FS0039: The value or constructor 'denom' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(48,28): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(48,44): error FS0001: This expression was expected to have type
    int    
but here has type
    bigint    

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(49,29): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(51,29): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(52,25): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(53,26): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(55,24): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(60,21): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(64,33): error FS0039: The value or constructor 'num' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(65,33): error FS0039: The value or constructor 'denom' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(93,34): error FS0039: The value or constructor 'repeat' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(98,18): error FS0039: The value or constructor 'parseIntStr' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(135,17): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(139,20): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(139,29): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(140,37): error FS0039: The value or constructor 'num' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(141,29): error FS0039: The value or constructor 'denom' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(142,17): error FS0027: This value is not mutable

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(143,63): error FS0039: The field, constructor or member 'padStart' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(145,16): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(148,42): error FS0039: The value or constructor 'num' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/calkin-wilf-sequence.fs(148,69): error FS0039: The value or constructor 'denom' is not defined
